--- a/index.html
+++ b/index.html
@@ -32,14 +32,7 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
               <div class="icons">
                 <a id="icons" href="https://www.linkedin.com/in/ma-arij-camroodien-384525276/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a id="icons" href="https://www.instagram.com/maarij_camroodien/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <!-- <a id="icons" href="#"><i class="fa-brands fa-github" style="color: #000000;"></i></a> -->
-                <a id="icons" href="https://github.com/Maarij-Camroodien" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"></i></a>
-                <!-- <a id="icons" href="#"><i class="fa-brands fa-github"></i></a> -->
-                <!-- <section class="git-icons">
-                  <img class="bottom" src="https://i.ibb.co/DtPVpYY/github-logo-git-hub-icon-with-text-on-white-and-black-background-free-vector-2.jpg" />
-                  <img class="top" src="https://i.ibb.co/19m1HYT/github-logo-git-hub-icon-with-text-on-white-and-black-background-free-vector-1.jpg" />
-                </section> -->
-                <!-- <a id="icons" href="#"><i class="fa-brands fa-linkedin"></i></a> -->
+                <a id="icons" href="https://github.com/Maarij-Camroodien" target="_blank"><i class="fa-brands fa-github"></i></a>
               </div>
               <h1 class="h1">Hi, I'm
               </br>
@@ -53,9 +46,6 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
               </div>
             </div>
             <div class="backgr">
-              <!-- https://i.ibb.co/Z8fyZVt/20231221-230455.jpg -->
-              <!-- https://i.ibb.co/kQFsj3T/20231221-230455-cropped-1.png -->
-              <!-- https://i.ibb.co/NTrBcRp/20231221-230455-cropped.png -->
               <img class="imgs" id="img" src="https://i.ibb.co/SXXn5tb/20231221-230455-cropped-modified.jpg" alt="">
             </div>
           </section>
@@ -67,7 +57,6 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
                 <p>Email: maarijcamroodien18@gmail.com</p>
                 <p>Address: Rylands, Cape Town,</p>
                 <p></p>
-                <!-- <img class="img2" src="https://i.ibb.co/6BdzX5k/20231220-192819.jpg" alt=""> -->
               </div>
               <div class="aboutxt">
                 <p id="aboutxt">
@@ -254,7 +243,6 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
                     I would highly recommend Ma'arij to anyone looking for a talented and dedicated professional."</p>
                 </div>
               </div>
-              <!-- Add more slides as needed -->
             </div>
             
             <button id="prevBtn"><i class="fa-solid fa-arrow-left"></i></button>
