--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
             <h1 class="subhead">ABOUT</h1>
             <div class="section2-cont">
               <div class="aboutme">
-                <p>Phone: 0616896182</p>
+                <p>Phone: 061 689 6182</p>
                 <p>Email: maarijcamroodien18@gmail.com</p>
                 <p>Address: Rylands, Cape Town,</p>
                 <p></p>
@@ -76,7 +76,7 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
                 <i class="fa-solid fa-user-graduate"></i>
                 <div class="card-text">
                   <h2>Rylands High School</h2>
-                <p>Matriculated at Rylands High School with a batchelors</p>
+                <p>Matriculated at Rylands High School with a bachelors</p>
                 </div>
               </div>
               <div class="cards">
@@ -277,6 +277,18 @@ integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="ano
           </section>
       </main>
     </div>
+    <footer class="footer">
+      <div class="footer-cont">
+        <div class="foot-cont">
+          <div class="footicons">
+            <a id="footicons" href="https://www.linkedin.com/in/ma-arij-camroodien-384525276/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+            <a id="footicons" href="https://www.instagram.com/maarij_camroodien/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a id="footicons" href="https://github.com/Maarij-Camroodien" target="_blank"><i class="fa-brands fa-github"></i></a>
+          </div>
+          <a class="logo" id="footlogo" href="#">&copy; MAARIJ CAMROODIEN</a>
+        </div>
+      </div>
+    </footer>
 </body>
 <script src="js/main.js"></script>
 </html>
